# tracebacks

./: .gitignore  README.md  blackjack.py  factorial.py  factorial_trace.py  fibonnaci.md  fibonnaci.py  newfile.py  serializetuples.py  setup.cfg  trace.py  traceback.py  tracedata.json
src/: make_output.py
src/basedirectory/: foo.txt
src/codeinsights/: blackjack.py  dump.py  trace.py
src/outputdirectory/: foo.html
tests/: test_manual.py  test_trace.py
tests/data/: bar.txt  foo.txt
tests/tmp/output/: bar.html
