[metadata]
name = codeinsights
version = 0.0.1
description = Write a short description here for the project
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    pygments

[options.packages.find]
where=src

[options.extras_require]
dev =
    pytest